--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -1,4 +1,52 @@
 {
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "b1c2cfc9-4ffb-4583-9193-63a0fee0dbce",
+   "metadata": {},
+   "source": [
+    "# WSI pre-processing "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7759d9b9-deb5-4e81-afc6-2f502f552089",
+   "metadata": {},
+   "source": [
+    "## 1.1 obtain classified patches for each WSI\n",
+    "\n",
+    "Please refer to https://github.com/choosehappy/HistoQC to install HistoQC and then run the following:\n",
+    "\n",
+    "python -m histoqc -c v2.1 -n 3 \"/scratch_tmp/prj/cb_normalbreast/prj_BreastAgeNet/WSIs/NKI/*.mrxs\" -o \"/scratch_tmp/prj/cb_normalbreast/prj_BreastAgeNet/QCs/NKI\"\n",
+    "\n",
+    "This outputs a _mask_use.png file that contains the detected foreground tissue regions\n",
+    "\n",
+    "\n",
+    "Then refer to https://github.com/cancerbioinformatics/NBT-Classifier to obtain classified patches for each WSI and then run the following:\n",
+    "\n",
+    "python main.py \\\n",
+    "  --wsi_folder /scratch_tmp/prj/cb_normalbreast/prj_BreastAgeNet/WSIs/NKI \\\n",
+    "  --mask_folder /scratch_tmp/prj/cb_normalbreast/prj_BreastAgeNet/QCs/NKI \\\n",
+    "  --output_folder /scratch_tmp/prj/cb_normalbreast/prj_BreastAgeNet/FEATURES/NKI \\\n",
+    "  --model_type TC_512 \\\n",
+    "  --patch_size_microns 128 \\\n",
+    "  --roi_width 250\n",
+    "  \n",
+    "This outputs a slide1_TC_512_patch.csv file that contains the detected and classified patches."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0171a1d-b6c1-4859-80c3-4043bb58e730",
+   "metadata": {},
+   "source": [
+    "## 1.2 extract features from patches using pre-trained models\n",
+    "\n",
+    "Please run the following\n",
+    "\n",
+    "python extractFeatures.py --model UNI --stain augmentation --cohort NKI"
+   ]
+  },
   {
    "cell_type": "markdown",
    "id": "f8545712-229c-45cc-b0d2-a7e6616f3f23",
@@ -25,67 +73,6 @@
     "\n",
     "\n",
     "def print_summary(df):\n",
-    "    df[\"patient_id\"] = df[\"patient_id\"].astype(str)\n",
-    "    print(f\"Number of unique WSI IDs: {df['wsi_id'].nunique()}\")\n",
-    "    print(f\"Number of unique patient IDs: {df['patient_id'].nunique()}\")\n",
-    "    print(f\"Overall age range: {df['age'].min()} - {df['age'].max()}\")\n",
-    "        \n",
-    "    age_groups, counts = np.unique(df[\"age_group\"], return_counts=True)\n",
-    "    print(\"Unique age groups and counts:\", dict(zip(age_groups, counts)))\n",
-    "    print(\"\\nAge range per cohort:\")\n",
-    "    \n",
-    "    for cohort, group in df.groupby(\"cohort\"):\n",
-    "        print(f\"  {cohort}: {group['age'].min()} - {group['age'].max()}\")\n",
-    "    \n",
-    "    df = df.groupby([\"age_group\", \"cohort\"]).agg(\n",
-    "        num_patients=(\"patient_id\", \"nunique\"),\n",
-    "        num_wsis=(\"wsi_id\", \"nunique\")\n",
-    "    ).reset_index()\n",
-    "    \n",
-    "    pivot_df = df.pivot(index=\"cohort\", columns=\"age_group\", values=[\"num_wsis\", \"num_patients\"])\n",
-    "    formatted_df = pivot_df.apply(lambda x: x[\"num_wsis\"].astype(str) + \"/\" + x[\"num_patients\"].astype(str), axis=1)\n",
-    "    formatted_df[\"Total\"] = df.groupby(\"cohort\")[\"num_wsis\"].sum().astype(str) + \"/\" + df.groupby(\"cohort\")[\"num_patients\"].sum().astype(str)\n",
-    "    col_sum_wsis = df.groupby(\"age_group\")[\"num_wsis\"].sum()\n",
-    "    col_sum_patients = df.groupby(\"age_group\")[\"num_patients\"].sum()\n",
-    "    formatted_df.loc[\"Total\"] = col_sum_wsis.astype(str) + \"/\" + col_sum_patients.astype(str)\n",
-    "    formatted_df.loc[\"Total\", \"Total\"] = df[\"num_wsis\"].sum().astype(str) + \"/\" + df[\"num_patients\"].sum().astype(str)\n",
-    "    print(formatted_df)\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "def clean_data(meta_pt, FEATURES, model_name=\"UNI\", stainFunc=\"reinhard\"):\n",
-    "    clinic_df = pd.read_csv(meta_pt)\n",
-    "    clinic_df = add_ageGroup(clinic_df)\n",
-    "    \n",
-    "    print(\"-\" * 30)\n",
-    "    print(\"filtering features...\")\n",
-    "    h5_dict = {\"wsi_id\": [], \"h5df\": []} \n",
-    "    for wsi_id in list(clinic_df[\"wsi_id\"]):\n",
-    "        file = glob.glob(f'{FEATURES}/*/{wsi_id}*/{wsi_id}*{model_name}*{stainFunc}*.h5')\n",
-    "        if file:\n",
-    "            for i in file:\n",
-    "                h5_dict[\"wsi_id\"].append(i.split(\"/\")[-2])\n",
-    "                h5_dict[\"h5df\"].append(i)  \n",
-    "                \n",
-    "    h5_df = pd.DataFrame(h5_dict)  \n",
-    "    clinic_df = clinic_df.merge(h5_df, on=\"wsi_id\", how=\"right\")  \n",
-    "\n",
-    "    valid_wsi = []\n",
-    "    valid_patches = []\n",
-    "    for fea_pt in clinic_df[\"h5df\"]: \n",
-    "        with h5py.File(fea_pt, \"r\") as file:\n",
-    "            bag = np.array(file[\"embeddings\"])\n",
-    "            bag = np.squeeze(bag)\n",
-    "            img_id = np.array(file[\"patch_id\"])\n",
-    "        img_id = [i.decode(\"utf-8\") for i in img_id]\n",
-    "        bag_df = pd.DataFrame(bag)\n",
-    "        bag_df.index = img_id\n",
-    "    \n",
-    "        csv_pt = glob.glob(f\"{fea_pt.split('_bagFeature_')[0]}*patch.csv\")[0]\n",
-    "        df = pd.read_csv(csv_pt)\n",
-    "    \n",
-    "        valid_id = list(df['patch_id'][df['TC_epi'] > 0.9])\n",
-    "        valid_id = list(set(valid_id) & set(bag_df.index))\n",
     "        valid_patches.extend(valid_id)\n",
     "        if valid_id:\n",
     "            wsi_id = parse_wsi_id(valid_id[0])\n",
