--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -1,23 +1,10 @@
 {
  "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "f0171a1d-b6c1-4859-80c3-4043bb58e730",
-   "metadata": {},
-   "source": [
-    "## 1.2 extract features from patches using pre-trained models\n",
-    "\n",
-    "Please run the following\n",
-    "\n",
-    "python extractFeatures.py --model UNI --stain augmentation --cohort NKI"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f8545712-229c-45cc-b0d2-a7e6616f3f23",
    "metadata": {},
    "source": [
-    "## 1.3 clean data\n",
+    "## clean data\n",
     "The following step further clean the data by removing invalid slides that either failed to obtain features or contain epithelium patches (with a confidence higher than 0.9) less than 5."
    ]
   },
